# TADs-Dictionary-and-List-

./: CMakeLists.txt  readme.txt
Entities/: Event.cpp  Event.h  Friendship.cpp  Friendship.h  Message.cpp  Message.h  User.cpp  User.h  main.cpp
Repositories/: RepoFileUser.h  RepositoryFriendship.cpp  RepositoryFriendship.h  RepositoryMessage.cpp  RepositoryMessage.h  RepositoryUser.cpp  RepositoryUser.h
Services/: ServiceFriendship.cpp  ServiceFriendship.h  ServiceMessage.cpp  ServiceMessage.h  ServiceUser.cpp  ServiceUser.h
TAD-uri/: Dictionary.h  List.h  Node.h
UserInterface/: UI.cpp  UI.h
